compiler/testData/diagnostics/tests/resolve/resolveTypeArgsForUnresolvedCall.fir.kt
fun foo() {
    <!UNRESOLVED_REFERENCE!>x<!>.<!UNRESOLVED_REFERENCE!>yyy<!><XXX>()
    <!UNRESOLVED_REFERENCE!>x<!>.<!UNRESOLVED_REFERENCE!>yyy<!><Int>()
}